--- a/.htaccess
+++ b/.htaccess
@@ -24,6 +24,7 @@ RewriteEngine On
 RewriteBase /
 RewriteRule ^payment_callback/(.*) index.php?route=extension/payment/$1/callback [QSA]
 RewriteRule ^sitemap.xml$ index.php?route=extension/feed/google_sitemap [L]
+RewriteRule ^payment_callback/(.*) index.php?route=extension/payment/$1/callback [QSA]
 RewriteRule ^googlebase.xml$ index.php?route=extension/feed/google_base [L]
 RewriteRule ^system/storage/(.*) index.php?route=error/not_found [L]
 RewriteCond %{REQUEST_FILENAME} !-f
